--- a/package.json
+++ b/package.json
@@ -13,35 +13,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.14",
+    "@angular/animations": "9.0.0",
     "@angular/cdk": "^8.0.0",
-    "@angular/common": "8.2.14",
-    "@angular/compiler": "8.2.14",
-    "@angular/core": "8.2.14",
-    "@angular/forms": "8.2.14",
+    "@angular/common": "9.0.0",
+    "@angular/compiler": "9.0.0",
+    "@angular/core": "9.0.0",
+    "@angular/forms": "9.0.0",
     "@angular/material": "^8.0.0",
     "@angular/material-moment-adapter": "8.0.0",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "8.2.14",
-    "@angular/router": "8.2.14",
+    "@angular/platform-browser": "9.0.0",
+    "@angular/platform-browser-dynamic": "9.0.0",
+    "@angular/router": "9.0.0",
     "body-parser": "^1.18.3",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "hammerjs": "^2.0.8",
     "moment": "^2.22.2",
     "rxjs": "6.5.4",
-    "zone.js": "~0.9.1"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.25",
-    "@angular/cli": "^8.3.25",
-    "@angular/compiler-cli": "8.2.14",
-    "@angular/language-service": "8.2.14",
+    "@angular-devkit/build-angular": "~0.900.1",
+    "@angular/cli": "^9.0.1",
+    "@angular/compiler-cli": "9.0.0",
+    "@angular/language-service": "9.0.0",
     "@types/express": "^4.0.39",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^5.0.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "^4.1.0",
@@ -53,6 +54,6 @@
     "protractor": "^6.0.0",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "3.5.3"
+    "typescript": "3.7.5"
   }
 }
